crud usuario autenticacao com token

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=minas
 DATABASE_PASSWORD=minas123
+
+
+TOKEN_SECRET=asdasasd16wd6w45sa64d5as4d6as4das4dasd46asd4a8s9
+TOKEN_EXPIRATION=1d
