--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   }
 }
